# rich-text-with-AI-helper

./: .gitignore  README.md  build.bat
llm_api/: ai_server.py
project/: CMakeLists.txt
project/mui/: update.py
project/mui/zh_CN/: editor_translate_zh.ts  main_translate_zh.ts  topmenu_translate_zh.ts
project/src/: CMakeLists.txt
project/src/editdoc/: CMakeLists.txt  aiconfig.h  aiconfigdialog.cpp  aiconfigdialog.h  aiconfigdialog.ui  aimanager.cpp  aimanager.h  image.qrc  kaieditor.cpp  kaieditor.h  kheaderedit.cpp  kheaderedit.h  kpagecontainer.cpp  kpagecontainer.h  ktab.cpp  ktab.h  ktextdoc.cpp  ktextdoc.h  textstyle.h
project/src/editdoc/translation/: editor_translate_zh.qm
project/src/mainwindow/: CMakeLists.txt  image.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
project/src/mainwindow/translation/: main_translate_zh.qm
project/src/topmenu/: CMakeLists.txt  clipboardsidebar.cpp  clipboardsidebar.h  image.qrc  kairibbon.cpp  kairibbon.h  kclipboardtoolbar.cpp  kclipboardtoolbar.h  kcolorpicker.cpp  kcolorpicker.h  kfonttoolbar.cpp  kfonttoolbar.h  kinsertribbon.cpp  kinsertribbon.h  kpageribbon.cpp  kpageribbon.h  kparagraphtoolbar.cpp  kparagraphtoolbar.h  kstartribbon.cpp  kstartribbon.h  kstylebutton.cpp  kstylebutton.h  kstylesfloatingwindow.cpp  kstylesfloatingwindow.h  kstylestoolbar.cpp  kstylestoolbar.h  ktablepickerpopup.cpp  ktablepickerpopup.h  ktopmenu.cpp  ktopmenu.h  stylemanager.cpp  stylemanager.h
project/src/topmenu/translation/: topmenu_translate_zh.qm
